# Timetable-Codex2

./: AGENTS.md  CMakeLists.txt  DEPENDENCIES.txt  Makefile  README.md
docs/: architecture.md
include/: homepage.h  jsonmanager.h  mainwindow.h  models.h  settingspage.h  sidebar.h  taskspage.h  timetablepage.h
resources/: resources.qrc
resources/defaults/: SchoolPeriods.json  settings.json
resources/styles/: app.qss
src/: homepage.cpp  jsonmanager.cpp  main.cpp  mainwindow.cpp  settingspage.cpp  sidebar.cpp  taskspage.cpp  timetablepage.cpp
